// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pinned FocusPicker matches snapshot 1`] = `
<div
  className="Main"
>
  <button
    className="TestBorder Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    <span
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="Unpin from Focus"
    >
      <img
        alt="Unpin from Focus"
        className="SamwiseIconDefaultStyle CenterIcon ImageSize"
        src="/svgs/pin-2-dark-filled.svg"
      />
    </span>
  </button>
</div>
`;

exports[`Unpinned FocusPicker matches snapshot 1`] = `
<div
  className="Main"
>
  <button
    className="TestBorder Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    <span
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="Pin to Focus"
    >
      <img
        alt="Pin to Focus"
        className="SamwiseIconDefaultStyle CenterIcon ImageSize"
        src="/svgs/pin-2-dark-outline.svg"
      />
    </span>
  </button>
</div>
`;
